# planeks-news-task

./: .gitignore  Pipfile  README.md  pyproject.toml
ansible/: playbook.yml
django/: .coverage  Dockerfile  docker-compose-common.yml  docker-compose-local-dev.yml  docker-compose-prod.yml  entrypoint.sh  requirements.txt
django/comments/: forms.py  models.py  urls.py  views.py
django/comments/migrations/: 0001_initial.py
django/comments/templates/: new_comment.djhtml
django/config/: create_groups.py  urls.py
django/config/settings/: base.py  dev.py  prod.py
django/docs/source/: conf.py  index.rst
django/docs/source/apps/: comments.rst  posts.rst  users.rst
django/docs/source/apps/comments/: models.rst  views.rst
django/docs/source/apps/posts/: forms.rst  models.rst  utils.rst  views.rst
django/docs/source/apps/users/: forms.rst  managers.rst  models.rst  views.rst
django/posts/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
django/posts/migrations/: 0001_initial.py  0002_auto_20190907_1652.py  0003_auto_20190908_1216.py
django/templates/: base.djhtml  comment_delete.djhtml  comment_detail.djhtml  post_create.djhtml  post_delete.djhtml  post_detail.djhtml  post_list.djhtml  post_update.djhtml  title.djhtml
django/users/: admin.py  forms.py  managers.py  models.py  tests.py  urls.py  views.py
django/users/migrations/: 0001_initial.py
django/users/templates/: acc_active.djhtml  acc_active_done.djhtml  acc_active_email.djhtml
django/webpack/: package-lock.json
django/webpack/bundles/: main.js
